# CodeKit_v1

./: Data_code.py  LICENSE  Logic_code.py  PyQt_code.py  README.md  main.py  pyproject.toml  requirements.txt
data/: elgamal_params.json  settings.json  translations.json
installer/arch/: PKGBUILD  codekit-alterm-1.0.0-1-any.pkg.tar.zst  codekit-alterm.desktop
installer/windows/: CodeKit.spec
installer/windows/hooks/: hook-pyfiglet.py
src/: main.py
src/app/: __init__.py
src/app/core/: analyzers.py  ascii_art_logic.py  checkers.py  converters.py  data.py  dispatcher.py  equation_generator.py  generators.py  shortcut_manager.py
src/app/ui/: custom_widgets.py  main_window.py  ui_ascii_art.py  ui_cipher_detection.py  ui_color_converter.py  ui_regex_tester.py  ui_repl.py  ui_settings.py  ui_tabs.py  widget_factory.py
tests/: test_analyzers.py  test_checkers.py  test_converters.py  test_dispatcher.py  test_equation_generator.py  test_generators.py  test_ui.py
